[package]
name = "lintd-taskops"
version = "0.1.3"
edition = "2021"
authors = ["lifeich1 <lifeich0@gmail.com>"]
description = "My shared xtask operations"
categories = ["development-tools"]
keywords = ["xtask"]
license = "Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/lintd-taskops"
repository = "https://github.com/lifeich1/lintd-taskops"


[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
duct = "0.13.6"
serde = "1.0.189"
serde_derive = "1.0.189"
toml = "0.8.2"
xtaskops =  { version = "0.4.2", features = [] }
