[package]
name = "lintd-taskops"
version = "0.1.5"
edition = "2021"
authors = ["lifeich1 <lifeich0@gmail.com>"]
description = "My shared xtask operations"
categories = ["development-tools"]
keywords = ["xtask"]
license = "Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/lintd-taskops"
repository = "https://github.com/lifeich1/lintd-taskops"


[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
derive_builder = "0.12.0"
duct = "0.13.7"
serde = "1.0.217"
serde_derive = "1.0.217"
toml = "0.8.19"
xtaskops =  { version = "0.4.2", features = [] }
